--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,14 +8,22 @@
 </head>
 <body>
     <h1>Blockchain Hangman</h1>
-    <button id="startGame">Start New Game</button>
+    <div class="text">Enter stake between 0 and 0.5 ETH.</div>
+    <div class="game-controls">
+        <div class="stake-input">
+            <label for="stakeAmount">Stake (in ETH):</label>
+            <input type="number" id="stakeAmount" placeholder="Enter stake amount" min="0" step="0.01">
+        </div>
+        <button id="startGame" disabled>Start New Game</button>
+    </div>
+    
     <div class="game-info">
-        <div class="word-state">_ _ _ _ _ _</div>
+        <div class="word-state">_</div>
         <div class="tries-left">Tries Left: <span id="triesLeft">5</span></div>
     </div>
     <div class="letter-buttons" id="letterButtons"></div>
     <div class="word-guess">
-        <input type="text" id="wordGuessInput" placeholder="Guess the whole word">
+        <input type="text" id="wordGuessInput" placeholder="Guess the word">
         <button id="guessWordButton">Guess Word</button>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/web3/dist/web3.min.js"></script>
