--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     </div>
     <div class="letter-buttons" id="letterButtons"></div>
     <div class="word-guess">
-        <input type="text" id="wordGuessInput" placeholder="Guess the word">
-        <button id="guessWordButton">Guess Word</button>
+        <input type="text" id="wordGuessInput" placeholder="Guess the word" disabled>
+        <button id="guessWordButton" disabled>Guess Word</button>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/web3/dist/web3.min.js"></script>
     <script src="./frontend/script.js"></script>
